Created basic PhaserJS project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Match Three</title>
 </head>
 <body>
+    <script src="node_modules/phaser/dist/phaser.min.js"></script>
     <script src="script/bundle.js"></script>
 </body>
 </html>
