Added basic page styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Match Three</title>
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <script src="node_modules/phaser/dist/phaser.min.js"></script>
